--- a/SEA_Application/Views/Shared/_AdminDashboardLayout.cshtml
+++ b/SEA_Application/Views/Shared/_AdminDashboardLayout.cshtml
@@ -2261,5 +2261,21 @@
 
 
 
-    }); 
+    });
+
+    function showNotification(from, align, msg, type) {
+        //type = ['', 'info', 'danger', 'success', 'warning', 'rose', 'primary'];	
+        color = Math.floor((Math.random() * 6) + 1);
+        $.notify({
+            icon: "add_alert",
+            message: msg
+        }, {
+            type: type,
+            timer: 3000,
+            placement: {
+                from: from,
+                align: align
+            }
+        });
+    }
 </script>
