--- a/SEA_Application/Views/Shared/_ReceptionistDashboardLayout.cshtml
+++ b/SEA_Application/Views/Shared/_ReceptionistDashboardLayout.cshtml
@@ -103,9 +103,9 @@
             </div>
 
             <div class="sidebar-wrapper">
-                <ul class="nav">
-                    <li class="nav-item active">
-                        <a href="@Url.Action("Dashboard", "Receptionist_Dashboard")" class="nav-link nav-toggle">
+                <ul id="layout_navbar_toogle" class="nav">
+                    <li id="ReceptionHome" class="nav-item">
+                        <a href="@Url.Action("Dashboard", "Receptionist_Dashboard" )" class="nav-link nav-toggle">
                             <i class="sea-dash">
                                 <img style="width: 18px;line-height: 30px;font-size: 24px;vertical-align: -1px;" src="~/Content/assets/assets/icons/icon-home.png" alt="">
                             </i>
@@ -114,7 +114,7 @@
                     </li>
 
 
-                    <li class="nav-item">
+                    <li id="ReceptionNotes" class="nav-item">
 
                         <a href="@Url.Action("Index", "AspNetNotes" )" class="nav-link nav-toggle">
                             <i class="fal fa-books"></i>
@@ -122,7 +122,7 @@
                         </a>
                     </li>
 
-                    <li class="nav-item">
+                    <li id="ReceptionStudentFee" class="nav-item">
                         <a href="@Url.Action("StudentFee", "GrandTotal" )" class="nav-link nav-toggle">
                             <i class="sea-dash">
                                 <img style="width: 18px;line-height: 30px;font-size: 24px;vertical-align: -1px;" src="~/Content/assets/assets/icons/icon-teacher.png" alt="">
@@ -131,105 +131,116 @@
                         </a>
                     </li>
 
+                    <li id="ReceptionPhotoCopierSummary" class="nav-item">
+
+                        <a href="@Url.Action("Dashboard", "PhotoCopier_Dashboard" )" class="nav-link nav-toggle">
+                            <i class="fal fa-books"></i>
+                            <p>PhotoCopier Summary</p>
+                        </a>
+                    </li>
 
 
-
-                    @*<li class="nav-item">
-                    <a href="@(Url.Action("Index", "AspNetFeeDetail"))" class="nav-link nav-toggle">
-                        <i class="sea-dash">
-                            <img style="width: 18px;line-height: 30px;font-size: 24px;vertical-align: -1px;" src="~/Content/assets/assets/icons/Icon-Students.png" alt="">
-                        </i>
-                        <p>Online Courses</p>
-                    </a>
-                </li>*@
+                    @*
+                    <li class="nav-item">
+                        <a href="@(Url.Action("Index", "AspNetFeeDetail" ))" class="nav-link nav-toggle">
+                            <i class="sea-dash">
+                                <img style="width: 18px;line-height: 30px;font-size: 24px;vertical-align: -1px;" src="~/Content/assets/assets/icons/Icon-Students.png" alt="">
+                            </i>
+                            <p>Online Courses</p>
+                        </a>
+                    </li>*@
 
                     @*@if (Session == "Online Session")
-                {*@
+                    {*@
 
 
 
 
 
-                    @*<li class="nav-item" id="studenttopic">
-                    <a href="@Url.Action("Index", "AspnetSubjectTopics")" class="nav-link nav-toggle">
-                        <i class="fa fa-list-ul"></i>
-                        <span class="title">Topic</span>
-                    </a>
-                </li>
-                <li class="nav-item" id="studentlesson">
-                    <a href="@Url.Action("Index", "AspnetLessons")" class="nav-link nav-toggle">
-                        <i class="fa fa-leaf"></i>
-                        <span class="title">Lesson</span>
-                    </a>
-                </li>*@
+                    @*
+                    <li class="nav-item" id="studenttopic">
+                        <a href="@Url.Action(" Index", "AspnetSubjectTopics" )" class="nav-link nav-toggle">
+                            <i class="fa fa-list-ul"></i>
+                            <span class="title">Topic</span>
+                        </a>
+                    </li>
+                    <li class="nav-item" id="studentlesson">
+                        <a href="@Url.Action(" Index", "AspnetLessons" )" class="nav-link nav-toggle">
+                            <i class="fa fa-leaf"></i>
+                            <span class="title">Lesson</span>
+                        </a>
+                    </li>*@
 
-                    @*<li class="nav-item" id="studentQuestionAnswer">
-                    <a href="@Url.Action("Index", "AspnetQuestions")" class="nav-link nav-toggle">
-                        <i class="fa fa-book"></i>
-                        <span class="title">Questions Answers</span>
-                    </a>
-                </li>
-
-
-
-                <li class="nav-item" id="TestQuestions">
-                    <a href="@Url.Action("TestQuestions", "AspnetQuestions")" class="nav-link nav-toggle">
-                        <i class="fa fa-book"></i>
-                        <span class="title">Test Questions</span>
-                    </a>
-                </li>*@
-
-                    @*<li class="nav-item" id="studentQuiz">
-                    <a href="@Url.Action("Index", "AspnetQuizs")" class="nav-link nav-toggle">
-                        <i class="fa fa-pencil-square-o"></i>
-                        <span class="title">Quiz</span>
-                    </a>
-                </li>*@
-
-                    @*<li class="nav-item  ">
-                    <a href="@(Url.Action("Teacher_Announcement", "Teacher_Dashboard"))">
-                        <i class="fa fa-bullhorn"></i>
-                        <span class="title">Announcement</span>
-                    </a>
-                </li>
-
-                <li class="nav-item  ">
-                    <a href="@(Url.Action("Attendance", "Teacher_Dashboard"))">
-                        <i class="fa fa-list-ol"></i>
-                        <span class="title">Student Attendance</span>
-                    </a>
-                </li>
-
-                <li class="nav-item">
-                    <a href="@(Url.Action("ParentTeacherMeeting", "Teacher_Dashboard"))">
-                        <i class="fa fa-users"></i>
-                        <span class="title">Parent Teacher Meeting</span>
-                    </a>
-                </li>
+                    @*
+                    <li class="nav-item" id="studentQuestionAnswer">
+                        <a href="@Url.Action(" Index", "AspnetQuestions" )" class="nav-link nav-toggle">
+                            <i class="fa fa-book"></i>
+                            <span class="title">Questions Answers</span>
+                        </a>
+                    </li>
 
 
-                <li class="nav-item">
-                    <a href="#" class="nav-link nav-toggle">
-                        <i class="fa fa-book"></i>
-                        <span class="title">Assessment</span>
-                    </a>
 
-                    <ul class="sub-menu">
-                        <li class="nav-item  ">
-                            <a href="@(Url.Action("Subject_Assessment","Teacher_Dashboard"))">
-                                <i class="fa fa-circle-o"></i>
-                                <span class="title">Subject Assessment</span>
-                            </a>
-                        </li>
+                    <li class="nav-item" id="TestQuestions">
+                        <a href="@Url.Action(" TestQuestions", "AspnetQuestions" )" class="nav-link nav-toggle">
+                            <i class="fa fa-book"></i>
+                            <span class="title">Test Questions</span>
+                        </a>
+                    </li>*@
 
-                        <li class="nav-item  ">
-                            <a href="@(Url.Action("Class_Assessment", "Teacher_Dashboard"))">
-                                <i class="fa fa-circle-o"></i>
-                                <span class="title">Class Assessment</span>
-                            </a>
-                        </li>
-                    </ul>
-                </li>*@
+                    @*
+                    <li class="nav-item" id="studentQuiz">
+                        <a href="@Url.Action(" Index", "AspnetQuizs" )" class="nav-link nav-toggle">
+                            <i class="fa fa-pencil-square-o"></i>
+                            <span class="title">Quiz</span>
+                        </a>
+                    </li>*@
+
+                    @*
+                    <li class="nav-item  ">
+                        <a href="@(Url.Action(" Teacher_Announcement", "Teacher_Dashboard" ))">
+                            <i class="fa fa-bullhorn"></i>
+                            <span class="title">Announcement</span>
+                        </a>
+                    </li>
+
+                    <li class="nav-item  ">
+                        <a href="@(Url.Action(" Attendance", "Teacher_Dashboard" ))">
+                            <i class="fa fa-list-ol"></i>
+                            <span class="title">Student Attendance</span>
+                        </a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a href="@(Url.Action(" ParentTeacherMeeting", "Teacher_Dashboard" ))">
+                            <i class="fa fa-users"></i>
+                            <span class="title">Parent Teacher Meeting</span>
+                        </a>
+                    </li>
+
+
+                    <li class="nav-item">
+                        <a href="#" class="nav-link nav-toggle">
+                            <i class="fa fa-book"></i>
+                            <span class="title">Assessment</span>
+                        </a>
+
+                        <ul class="sub-menu">
+                            <li class="nav-item  ">
+                                <a href="@(Url.Action(" Subject_Assessment","Teacher_Dashboard"))">
+                                    <i class="fa fa-circle-o"></i>
+                                    <span class="title">Subject Assessment</span>
+                                </a>
+                            </li>
+
+                            <li class="nav-item  ">
+                                <a href="@(Url.Action(" Class_Assessment", "Teacher_Dashboard" ))">
+                                    <i class="fa fa-circle-o"></i>
+                                    <span class="title">Class Assessment</span>
+                                </a>
+                            </li>
+                        </ul>
+                    </li>*@
 
 
 
@@ -1658,6 +1669,26 @@
     <script src='~/Content/assets/packages/cal.js'></script>
 
     <script>
+
+        $(document).ready(function () {
+
+
+            $("#layout_navbar_toogle").on("click", "li", function () {
+
+
+
+                localStorage.ElementToActiveAfterPageLoad = $(this).attr('id');
+
+                //  alert(localStorage.ElementToActiveAfterPageLoad);
+            });
+
+
+            $("#" + localStorage.ElementToActiveAfterPageLoad).addClass('active');
+
+
+
+
+        });
 
 
         function filterGlobal() {
