--- a/SEA_Application/Views/Receptionist_Dashboard/BlankPage.cshtml
+++ b/SEA_Application/Views/Receptionist_Dashboard/BlankPage.cshtml
@@ -110,4 +110,13 @@
         </div>
     </div>
 </div>
+<script>
+  
 
+        $(document).ready(function () {
+            localStorage.ElementToActiveAfterPageLoad = "ReceptionHome";
+
+        })
+
+   
+</script>
