--- a/SEA_Application/Views/AspNetNotes/Index.cshtml
+++ b/SEA_Application/Views/AspNetNotes/Index.cshtml
@@ -420,6 +420,9 @@ else if (User.IsInRole("Receptionist"))
                                                 Id
                                             </th>
                                             <th>
+                                                Approved Id
+                                            </th>
+                                            <th>
                                                 User Name
                                             </th>
                                             <th>
@@ -873,6 +876,7 @@ else if (User.IsInRole("Receptionist"))
                     text: '<span class="datatableButtonsDownload"> <img src="/Content/assets/assets/icons/Icon-download.png" alt=""> Download</span>'
                 }
             ],
+            "order": [[1, "asc"]],
             "language": {
                 "lengthMenu": "<div class=\"d-flex showEntriesCon\">\n" +
                     "  <div class=\"p-2\">Show </div> <div class=\"showEntries\"> _MENU_\n" +
@@ -955,6 +959,8 @@ else if (User.IsInRole("Receptionist"))
             data: {},
             success: function (data) {
                 table2.fnClearTable();
+
+                
                 //  alert("Approved Order Tab");
                 $.each(data, function (index) {
                     //var tablerow = '<tr>'
@@ -968,11 +974,11 @@ else if (User.IsInRole("Receptionist"))
                     //'</tr > ';
                     if (data[index].OrderStatus == "Paid") {
 
-                        table2.fnAddData([data[index].OrderID, data[index].StudentName, data[index].ClassName, data[index].TotalAmount, data[index].OrderStatus, data[index].OrderType, "<center> <input type='button' class='btn btn-primary btn-sm white' value='Details' id='" + data[index].OrderID + "' ></center>"]);
+                        table2.fnAddData([data[index].OrderID, data[index].ApprovedId, data[index].StudentName, data[index].ClassName, data[index].TotalAmount, data[index].OrderStatus, data[index].OrderType, "<center> <input type='button' class='btn btn-primary btn-sm white' value='Details' id='" + data[index].OrderID + "' ></center>"]);
                         // var TableRow = "<tr id='" + data[index].OrderID + "' data-toggle='modal' data-target='#myModal' >  <td>" + data[index].OrderID + "</td> <td >" + data[index].StudentName + "</td> <td >" + data[index].ClassName + "</td>  <td >" + data[index].TotalAmount + "</td>  <td >" + data[index].OrderStatus + "</td> <td><button  id='" + data[index].OrderID + "' class='btn btn-success btn-sm approveBtn' disabled>Approve</button></td></tr> "
                     }
                     else {
-                        table2.fnAddData([data[index].OrderID, data[index].StudentName, data[index].ClassName, data[index].TotalAmount, data[index].OrderStatus, data[index].OrderType, "<center> <input type='button' class='btn btn-primary btn-sm white' value='Details' id='" + data[index].OrderID + "' > </center>"]);
+                        table2.fnAddData([data[index].OrderID, data[index].ApprovedId, data[index].StudentName, data[index].ClassName, data[index].TotalAmount, data[index].OrderStatus, data[index].OrderType, "<center> <input type='button' class='btn btn-primary btn-sm white' value='Details' id='" + data[index].OrderID + "' > </center>"]);
 
                         // var TableRow = "<tr id='" + data[index].OrderID + "' data-toggle='modal' data-target='#myModal' > <td>" + data[index].OrderID + "</td> <td >" + data[index].StudentName + "</td> <td >" + data[index].ClassName + "</td>  <td >" + data[index].TotalAmount + "</td>  <td >" + data[index].OrderStatus + "</td> <td><button  id='" + data[index].OrderID + "' class='btn btn-success btn-sm approveBtn'>Approve</button></td></tr> "
                     }
@@ -1365,7 +1371,7 @@ else if (User.IsInRole("Receptionist"))
 
                     if (data[index].OrderStatus == "Paid") {
 
-                        table2.fnAddData([data[index].OrderID, data[index].StudentName, data[index].ClassName, data[index].TotalAmount, data[index].OrderStatus, data[index].OrderType, "<center> <input type='button' class='btn btn-primary btn-sm white' value='Details' id='" + data[index].OrderID + "' ></center>"]);
+                        table2.fnAddData([data[index].OrderID, data[index].ApprovedId, data[index].StudentName, data[index].ClassName, data[index].TotalAmount, data[index].OrderStatus, data[index].OrderType, "<center> <input type='button' class='btn btn-primary btn-sm white' value='Details' id='" + data[index].OrderID + "' ></center>"]);
                     }
 
                 });
