--- a/SEA_Application/Views/Sales/Index.cshtml
+++ b/SEA_Application/Views/Sales/Index.cshtml
@@ -70,12 +70,12 @@
                     }
                 },
 
-                {
-                    text: '<span class="datatableButtonsEdit"> <img src="/Content/assets/assets/icons/Icon-edit.png" alt=""> Return Order</span>',
-                    action: function (e, dt, button, config) {
-                        window.location.href = '/Sales/ReturnSaleOrder';
-                    }
-                },
+                //{
+                //    text: '<span class="datatableButtonsEdit"> <img src="/Content/assets/assets/icons/Icon-edit.png" alt=""> Return Order</span>',
+                //    action: function (e, dt, button, config) {
+                //        window.location.href = '/Sales/ReturnSaleOrder';
+                //    }
+                //},
 
                 {
                     text: '<span class="datatableButtonsEdit"> <img src="/Content/assets/assets/icons/Icon-edit.png" alt=""> Summary</span>',
