--- a/SEA_Application/Views/Sales/Summary.cshtml
+++ b/SEA_Application/Views/Sales/Summary.cshtml
@@ -58,7 +58,7 @@ else if (User.IsInRole("Cashier"))
 
 
             <div class="pull-right">
-                <button id="PrintNotes" class="btn btn-primary btn-sm" style="font-size:14px;">Print Notes</button>
+                <button id="PrintNotes" class="btn btn-primary btn-sm" style="font-size:14px;">Print</button>
 
             </div>
 
