--- a/SEA_Application/Views/Inventory/PurchaseOrdersList.cshtml
+++ b/SEA_Application/Views/Inventory/PurchaseOrdersList.cshtml
@@ -9,9 +9,6 @@
         display: block !important;
     }
 
-  
-
-    
 </style>
 <div class="card">
     <div class="card-body p-4">
@@ -156,7 +153,16 @@
         });
 
 
-    })
+
+        //$('.table').on('click', 'tbody tr', function () {
+        //    var td = $(this).children("td");
+        //    var Id = $(td[0]).children("input").val();
+           
+        //    window.location.href = "/Inventory/EditStockPurchase?id=" + Id;
+        //});
+
+
+    })//end of document ready
 
     function OrderDetails(id) {
 
