--- a/SEA_Application/Views/Sales/Create.cshtml
+++ b/SEA_Application/Views/Sales/Create.cshtml
@@ -101,15 +101,15 @@
                             <tr id="TableRow0">
 
                                 <td style="width:20%">
-                                    <select style="width:200px;" class="form-control drop ItemInventoryDropDown" id="InventoryStocks0" name="InventoryStocks0" required></select>
+                                    <select tabindex="1" style="width:200px;" class="form-control drop ItemInventoryDropDown" id="InventoryStocks0" name="InventoryStocks0" required></select>
                                 </td>
                                 <td>
 
-                                    <input readonly class="form-control ItemSaleUnitPrice" id="UnitName0" type="text" name="UnitName0" />
+                                    <input readonly class="form-control ItemSaleUnitName" id="UnitName0" type="text" name="UnitName0" />
 
                                 </td>
                                 <td style="width:15%">
-                                    <input  class="form-control ItemSaleUnitPrice" id="SaleUnitPrice0" value="0" min="0" type="number" name="SaleUnitPrice0" required />
+                                    <input  tabindex="2"   class="form-control ItemSaleUnitPrice" id="SaleUnitPrice0" value="0" min="0" type="number" name="SaleUnitPrice0" required />
                                 </td>
 
                                 <td style="width:15%">
@@ -118,7 +118,7 @@
                                 </td>
 
                                 <td style="width:15%">
-                                    <input class="form-control ItemSelectionQuantity" id="StockQuantity0" value="1" type="number" min="1" name="StockQuantity0" required />
+                                    <input tabindex="3" class="form-control ItemSelectionQuantity" id="StockQuantity0" value="1" type="number" min="1" name="StockQuantity0" required />
                                 </td>
 
 
@@ -127,7 +127,7 @@
                                 </td>
 
                                 <td style="width:15%">
-                                    <button type="button" style="background:#32CD32" id="" class="btn btn-sm btn-default " onclick="RawStock()"><i class="fa fa-plus" style="font-size:12px"></i></button>
+                                    <button tabindex="4" type="button" style="background:#32CD32" id="" class="btn btn-sm btn-default " onclick="RawStock()"><i class="fa fa-plus" style="font-size:12px"></i></button>
                                 </td>
 
                             </tr>
@@ -187,10 +187,10 @@
 
                 <div class="form-group">
                     <div class="col-md-12">
-                        <button type="submit" id="SaveButton" class="btn btn-primary rounded rounded-lg"> Save </button>
+                        <button tabindex="99" type="submit" id="SaveButton" class="btn btn-primary rounded rounded-lg"> Save </button>
 
 
-                        <button type="button" id="btnCancel"  class="btn btn-primary rounded rounded-lg bg-transparent text-muted shadow-none mr-3">
+                        <button tabindex="100" type="button" id="btnCancel"  class="btn btn-primary rounded rounded-lg bg-transparent text-muted shadow-none mr-3">
                             <i class="material-icons mr-2">cached</i>  Cancel
                         </button>
 
@@ -271,6 +271,36 @@
 
         $("#PageHeader").html("Sale Order");
 
+    
+        $(document).keyup(function (e) {
+
+            // $("SPAN INPUT BUTTON").css('border-bottom', 'none');
+            //$("SPAN INPUT BUTTON").css("border-bottom", 'none');
+            $("SPAN,INPUT,BUTTON").css("border-bottom", "0");
+
+            // $("SPAN").css("border-bottom", "1px solid gray");
+
+            //.select2 - container--default .select2 - selection--single {
+            //    background - color: #fff;
+            //    border: 1px solid #aaa;
+            //    border - radius: 4px;
+            //}
+
+            $(".select2-container--default .select2-selection--single").css('border', '1px solid #aaa');
+
+            var focused = $(document.activeElement);
+
+            var accessElement = focused;
+
+            var TagName = $(accessElement).prop("tagName");
+
+            if (TagName == "SPAN" || TagName == "BUTTON" || TagName == "INPUT") {
+
+                accessElement.css('border-bottom', '2px solid black');
+            }
+
+        });
+
         //document.getElementById('Date').valueAsDate = new Date();
 
         var now = new Date();
@@ -285,6 +315,7 @@
         $("#Date").val(today);
 
         $(".drop").select2();
+
 
         $.ajax({
             type: "POST",
@@ -540,7 +571,7 @@
                                 '<p class="centered">' +
                                 '<b> <span id="OrderNo">' + OrderNo + '</span></b><br />' +
                                 '<b> <span id="DateTime">' + DateAndTime + '</span></b> </p>' +
-                                ' <br><b>Cashier:</b><b> SeaAdmin</b> <span> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;' +
+                                ' <br><b>Cashier:</b><b> </b> <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;' +
                                 ' &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Cashier Copy</b>' +
                                 ' </span>' +
                                
@@ -623,16 +654,27 @@
 
     })//end of document ready
 
+    var tabindex1 = 5;
+    var tabindex2 = 6;
+    var tabindex3 = 7;
+    var tabindex4 = 8;
 
     function RawStock() {
 
-        $("#GrandTotalRow").before('<tr id="TableRow' + count + '"><td style="width:20%"> <select   style ="width:200px;" class="form-control drop ItemInventoryDropDown" id="InventoryStocks' + count + '" name="InventoryStocks' + count + '" required>' + ExternalAndProductionList + '</select></td><td><input readonly class="form-control ItemSaleUnitPrice" id="UnitName' + count + '" type="text" name="UnitName' + count + '"  /></td><td style="width:15%"> <input  class="form-control ItemSaleUnitPrice" id="SaleUnitPrice' + count + '" value="0" min="0" type="number" name="SaleUnitPrice' + count + '" required /></td>   <td style="width:15%"><input readonly class="form-control ItemAvailableQuantity" id="AvailableQuantity' + count + '" value="0" type="number" min="1" name="AvailableQuantity' + count + '" required /></td><td style="width:15%" > <input class="form-control ItemSelectionQuantity" id="StockQuantity' + count + '" value="1" min="0" type="number" name="StockQuantity' + count + '" required /></td> <td style="width:15%">  <input readonly type="number" id="TotalCost' + count + '" name="TotalCost' + count + '" class="form-control" value="0" required /></td><td style="width:15%"><button class="btn btn-sm btn-danger  remove_btn" onclick="Remove(' + count + ')"><i style ="font-size:12px;" class="fa fa-remove"></i></button></td></tr>');
+        $("#GrandTotalRow").before('<tr id="TableRow' + count + '"><td style="width:20%"> <select tabindex=' + tabindex1 + '   style ="width:200px;" class="form-control drop ItemInventoryDropDown" id="InventoryStocks' + count + '" name="InventoryStocks' + count + '" required>' + ExternalAndProductionList + '</select></td><td><input readonly class="form-control ItemSaleUnitName"  id="UnitName' + count + '" type="text" name="UnitName' + count + '"  /></td><td style="width:15%"> <input  class="form-control ItemSaleUnitPrice" tabindex=' + tabindex2 + ' id="SaleUnitPrice' + count + '" value="0" min="0" type="number" name="SaleUnitPrice' + count + '" required /></td>   <td style="width:15%"><input readonly class="form-control ItemAvailableQuantity" id="AvailableQuantity' + count + '" value="0" type="number" min="1" name="AvailableQuantity' + count + '" required /></td><td style="width:15%" > <input class="form-control ItemSelectionQuantity" tabindex=' + tabindex3 + ' id="StockQuantity' + count + '" value="1" min="0" type="number" name="StockQuantity' + count + '" required /></td> <td style="width:15%">  <input readonly type="number" id="TotalCost' + count + '" name="TotalCost' + count + '" class="form-control" value="0" required /></td><td><button tabindex=' + tabindex4 + ' type="button" style="background:#32CD32" id="" class="btn btn-sm btn-default " onclick="RawStock()"><i class="fa fa-plus" style="font-size:12px"></i></button></td><td style="width:15%"><button class="btn btn-sm btn-danger  remove_btn" onclick="Remove(' + count + ')"><i style ="font-size:12px;" class="fa fa-remove"></i></button></td></tr>');
 
         $(".drop").select2();
 
         row[count] = count;
         arr[count] = count;
         count = count + 1;
+
+
+        tabindex1 = tabindex1 + 4;
+        tabindex2 = tabindex2 + 4;
+        tabindex3 = tabindex3 + 4;
+        tabindex4 = tabindex4 + 4;
+
 
     }
 
