--- a/SEA_Application/Views/Sales/ReturnSaleOrder.cshtml
+++ b/SEA_Application/Views/Sales/ReturnSaleOrder.cshtml
@@ -1,7 +1,9 @@
 ﻿
 @{
     ViewBag.Title = "Create";
-    Layout = "~/Views/Shared/_AdminDashboardLayout.cshtml";
+    // Layout = "~/Views/Shared/_AdminDashboardLayout.cshtml";
+    Layout = "~/Views/Shared/_CashierDashboardLayout.cshtml";
+
 }
 
 <style>
@@ -20,8 +22,6 @@
     #table1 td {
         width: 50%;
     }
-
-    
 </style>
 
 <link href="~/Content/print-receipt-thermal-printer-master/print-receipt-thermal-printer-master/style.css" media="screen" rel="stylesheet" />
@@ -43,17 +43,6 @@
 
                 </div>
                 <br />
-                <div class="form-group">
-                    <div class="col-md-12">
-
-                        <label class="control-label"> Customer Name</label>
-
-                        @*@Html.DropDownList("StudentID", null, " Select One", htmlAttributes: new { @class = "form-control drop", @id = "StudentID", required = "required" })*@
-
-                        <input type="text" name="CustomerName" id="CustomerName" value="Customer" class="form-control" />
-
-                    </div>
-                </div>
 
             </div><!--end of column 6-->
 
@@ -86,15 +75,15 @@
                             <tr id="TableRow0">
 
                                 <td style="width:20%">
-                                    <select style="width:200px;" class="form-control drop ItemInventoryDropDown" id="InventoryStocks0" name="InventoryStocks0" required></select>
+                                    <select tabindex="1" style="width:200px;" class="form-control drop ItemInventoryDropDown" id="InventoryStocks0" name="InventoryStocks0" required></select>
                                 </td>
                                 <td>
-                                    <input readonly class="form-control ItemSaleUnitPrice" id="UnitName0" type="text" name="UnitName0"  />
+                                    <input readonly class="form-control ItemSaleUnitPrice" id="UnitName0" type="text" name="UnitName0" />
 
                                 </td>
 
                                 <td style="width:15%">
-                                    <input readonly class="form-control ItemSaleUnitPrice" id="SaleUnitPrice0" value="0" min="0" type="number" name="SaleUnitPrice0" required />
+                                    <input tabindex="2"  class="form-control ItemSaleUnitPrice" id="SaleUnitPrice0" value="0" min="0" type="number" name="SaleUnitPrice0" required />
                                 </td>
 
                                 <td style="width:15%">
@@ -103,7 +92,7 @@
                                 </td>
 
                                 <td style="width:15%">
-                                    <input class="form-control ItemSelectionQuantity" id="StockQuantity0" value="1" type="number" min="1" name="StockQuantity0" required />
+                                    <input tabindex="3" class="form-control ItemSelectionQuantity" id="StockQuantity0" value="1" type="number" min="1" name="StockQuantity0" required />
                                 </td>
 
 
@@ -111,6 +100,10 @@
                                     <input type="number" id="TotalCost0" name="TotalCost0" class="form-control" readonly value="0" required />
                                 </td>
 
+
+                                <td style="width:15%">
+                                    <button tabindex="4" type="button" style="background:#32CD32" id="" class="btn btn-sm btn-default " onclick="RawStock()"><i class="fa fa-plus" style="font-size:12px"></i></button>
+                                </td>
                             </tr>
 
 
@@ -147,10 +140,10 @@
 
                 <div class="form-group">
                     <div class="col-md-12">
-                        <button type="submit" id="SaveButton" class="btn btn-primary rounded rounded-lg"> Save </button>
+                        <button tabindex="99" type="submit" id="SaveButton" class="btn btn-primary rounded rounded-lg"> Save </button>
 
 
-                        <button type="button" id="btnCancel" class="btn btn-primary rounded rounded-lg bg-transparent text-muted shadow-none mr-3">
+                        <button tabindex="100" type="button" id="btnCancel" class="btn btn-primary rounded rounded-lg bg-transparent text-muted shadow-none mr-3">
                             <i class="material-icons mr-2">cached</i>  Cancel
                         </button>
 
@@ -281,6 +274,8 @@
 
             $("#SaleUnitPrice" + myArr[1] + "").val(UnitSalePriceOfProduct);
             $("#UnitName" + myArr[1]).val(UnitName);
+            $("#StockQuantity" + myArr[1]).val(1);
+
             $("#AvailableQuantity" + myArr[1]).val(QuantityOnHand);
 
             Total(myArr[1]);
@@ -295,6 +290,35 @@
                 event.preventDefault();
                 return false;
             }
+        });
+
+        $(document).keyup(function (e) {
+
+            // $("SPAN INPUT BUTTON").css('border-bottom', 'none');
+            //$("SPAN INPUT BUTTON").css("border-bottom", 'none');
+            $("SPAN,INPUT,BUTTON").css("border-bottom", "0");
+
+            // $("SPAN").css("border-bottom", "1px solid gray");
+
+            //.select2 - container--default .select2 - selection--single {
+            //    background - color: #fff;
+            //    border: 1px solid #aaa;
+            //    border - radius: 4px;
+            //}
+
+            $(".select2-container--default .select2-selection--single").css('border', '1px solid #aaa');
+
+            var focused = $(document.activeElement);
+
+            var accessElement = focused;
+
+            var TagName = $(accessElement).prop("tagName");
+
+            if (TagName == "SPAN" || TagName == "BUTTON" || TagName == "INPUT") {
+
+                accessElement.css('border-bottom', '2px solid black');
+            }
+
         });
 
 
@@ -400,14 +424,16 @@
 
                 var Date = $("#Date").val();
 
-               // var StudentId = $("#StudentID").val();
-                var CustomerName = $("#CustomerName").val();
+                // var StudentId = $("#StudentID").val();
+                // var CustomerName = $("#CustomerName").val();
+                var GrandTotal = $("#GrandTotal").val();
 
-               
+
+
                 $.ajax({
                     type: "post",
                     url: "/Sales/SaveReturnSaleOrder",
-                    data: { 'Date': Date, 'CustomerName': CustomerName, 'GrandTotal': GrandTotal, 'SaleOrdersList': SalesList },
+                    data: { 'Date': Date, 'GrandTotal': GrandTotal, 'SaleOrdersList': SalesList },
                     datatype: "json",
                     cache: false,
                     success: function (data) {
@@ -440,8 +466,30 @@
 
     })//end of document ready
 
+    var tabindex1 = 5;
+    var tabindex2 = 6;
+    var tabindex3 = 7;
+    var tabindex4 = 8;
 
-  
+    function RawStock() {
+
+        $("#GrandTotalRow").before('<tr id="TableRow' + count + '"><td style="width:20%"> <select tabindex=' + tabindex1 + '  style ="width:200px;" class="form-control drop ItemInventoryDropDown" id="InventoryStocks' + count + '" name="InventoryStocks' + count + '" required>' + ExternalAndProductionList + '</select></td><td><input readonly class="form-control ItemSaleUnitPrice" id="UnitName' + count + '" type="text" name="UnitName' + count + '"  /></td><td style="width:15%"> <input  class="form-control ItemSaleUnitPrice" tabindex=' + tabindex2 + ' id="SaleUnitPrice' + count + '" value="0" min="0" type="number" name="SaleUnitPrice' + count + '" required /></td>   <td style="width:15%"><input readonly class="form-control ItemAvailableQuantity" id="AvailableQuantity' + count + '" value="0" type="number" min="1" name="AvailableQuantity' + count + '" required /></td><td style="width:15%" > <input tabindex=' + tabindex3 + ' class="form-control ItemSelectionQuantity" id="StockQuantity' + count + '" value="1" min="0" type="number" name="StockQuantity' + count + '" required /></td> <td style="width:15%">   <input readonly type="number" id="TotalCost' + count + '" name="TotalCost' + count + '" class="form-control" value="0" required /></td><td><button tabindex=' + tabindex4 + ' type="button" style="background:#32CD32" id="" class="btn btn-sm btn-default " onclick="RawStock()"><i class="fa fa-plus" style="font-size:12px"></i></button></td><td style="width:15%"><button class="btn btn-sm btn-danger  remove_btn" onclick="Remove(' + count + ')"><i style ="font-size:12px;" class="fa fa-remove"></i></button></td></tr>');
+
+        $(".drop").select2();
+
+        row[count] = count;
+        arr[count] = count;
+        count = count + 1;
+
+        tabindex1 = tabindex1 + 4;
+        tabindex2 = tabindex2 + 4;
+        tabindex3 = tabindex3 + 4;
+        tabindex4 = tabindex4 + 4;
+
+    }
+
+
+
     function Total(RowNumber) {
 
         debugger
@@ -469,23 +517,26 @@
 
     function GrandTotal() {
 
-
         var GrandTotal = 0;
 
         for (var i in arr) {
 
             if (arr[i] == null)
                 continue;
-
-
             var TotalCost = $("#TotalCost" + arr[i]).val();
             GrandTotal = parseFloat(TotalCost) + GrandTotal;
 
         }
-
         $("#GrandTotal").val(GrandTotal);
+    }
 
-       
+    function Remove(e) {
+
+        var RowToDelete = "TableRow" + e;
+        document.getElementById(RowToDelete).remove();
+
+        arr.splice($.inArray(e, arr), 1);
+        GrandTotal();
 
     }
 
