--- a/SEA_Application/Views/Sales/Create.cshtml
+++ b/SEA_Application/Views/Sales/Create.cshtml
@@ -9,6 +9,13 @@
         padding: 5px;
     }
 
+    /*@@media print {
+        * {
+            -webkit-print-color-adjust: exact !important;*/ /* Chrome, Safari, Edge */
+            
+        /*}
+}*/
+
     #SaleOrderTable tr, th, td {
         border: 0px !important;
     }
@@ -566,13 +573,13 @@
                             var DiscountedRow = "<tr>  <td style='word-break:break-all;' class='description'>Total</td>  <td class='quantity'>&nbsp; </td> <td class='price'></td> <td class='Amount'>&nbsp;&nbsp;" + DiscountedPrice + "</td> </tr>";
 
                             $("#ReceiptBlock").append('<div id="bill" style="display:block"><div class="ticket" id="ticket" ><center>' +
-                                '<img style="width: 150px;" src="/Content/assets/assets/img/orignal.png" alt="Alternate Text" /></center>' +
+                                '<img style="width: 150px;" src="/Content/assets/assets/img/orignal.png"  alt="Alternate Text" /></center>' +
 
                                 '<p class="centered">' +
                                 '<b> <span id="OrderNo">' + OrderNo + '</span></b><br />' +
                                 '<b> <span id="DateTime">' + DateAndTime + '</span></b> </p>' +
-                                ' <br><b>Cashier:</b><b> </b> <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;' +
-                                ' &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Cashier Copy</b>' +
+                                ' <br><b>Cashier:</b><b>Bismarck </b> <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;' +
+                                ' &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b></b>' +
                                 ' </span>' +
                                
 
@@ -595,36 +602,6 @@
 
                                 '</div></div>');
 
-
-                            $("#ReceiptBlock").append('<div id="bill1" style="display:block"><div class="ticket" id="ticket" ><center>' +
-                                '<img style="width: 150px;" src="/Content/assets/assets/img/orignal.png" alt="Alternate Text" /></center>' +
-
-                                '<p class="centered">' +
-                                '<b> <span id="OrderNo">' + OrderNo + '</span></b><br />' +
-                                '<b> <span id="DateTime">' + DateAndTime + '</span></b> </p>' +
-                                ' <br><b>Cashier:</b><b> SeaAdmin</b> <span> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;' +
-                                ' &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Customer Copy</b>' +
-                                ' </span>' +
-                               
-
-                                '<table>' +
-                                '<thead>' +
-                                '<tr>' +
-                                '<th class="description">Item</th>' +
-                                '<th class="quantity">Qty</th>' +
-                                '<th class="price">Price</th>' +
-                                '<th class="Amount">Total</th>' +
-
-                                '</tr>' +
-                                '</thead>' +
-                                '<tbody id="billbody" style="border: 1px solid black">' + TableRow + '' + DiscountRow + ' ' + DiscountedRow + '</tbody>' +
-                                '</table>' +
-                                '<p class="centered">' +
-                                '<b style="font-weight:bold">  Website: https://officersacademy.pk/ </b>' +
-                                ' <b style="font-weight:bold"> <br>Facebook Page: https://www.facebook.com/officersacademylahore </b>' +
-                                ' </p>' +
-
-                                '</div></div>');
 
 
                             Receipt();
@@ -750,11 +727,11 @@
 
         var mywindow = window.open('', '', '');
         mywindow.document.write('<html><head><title>' + ""+ '</title>  ');
-        mywindow.document.write('<style>td,th,tr,table{border-top: 1px solid black;} td.description,th.description {width: 90px; max-width: 90px;word-break: break-word;}  td.quantity,th.quantity{ width: 40px;max-width: 40px;word-break: break-all;} td.Amount,th.Amount {  width: 60px;max-width: 60px;word-break: break-all;} td.Amount,th.Amount {  width: 60px;max-width: 60px;word-break: break-all;} .centered {text-align: center;align-content: center;} .ticket{width: 230px;max-width:230px;font-size: 12px}  img {  max-width: inherit;  width: inherit;} </style>');
+        mywindow.document.write('<style> img {-webkit-print-color-adjust: exact !important;}  td,th,tr,table{border-top: 1px solid black;} td.description,th.description {width: 90px; max-width: 90px;word-break: break-word;}  td.quantity,th.quantity{ width: 40px;max-width: 40px;word-break: break-all;} td.Amount,th.Amount {  width: 60px;max-width: 60px;word-break: break-all;} td.Amount,th.Amount {  width: 60px;max-width: 60px;word-break: break-all;} .centered {text-align: center;align-content: center;} .ticket{width: 230px;max-width:230px;font-size: 12px}  img {  max-width: inherit;  width: inherit;} </style>');
         mywindow.document.write('</head><body >');
 
         mywindow.document.write(document.getElementById('bill').innerHTML);
-        mywindow.document.write(document.getElementById('bill1').innerHTML);
+       // mywindow.document.write(document.getElementById('bill1').innerHTML);
 
         mywindow.document.write('</body></html>');
         mywindow.document.close(); // necessary for IE >= 10
@@ -763,7 +740,7 @@
         mywindow.print();
         mywindow.close();
 
-        //window.location.reload(true);
+     
         window.location.href = "/Sales/Create";
     }
 
